<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.kite9</groupId>
	<artifactId>kite9-visualization</artifactId>
	<version>1.0.RC1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>Kite9 Diagram Visualization</name>
	<url>http://www.kite9.com</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<build>
		<finalName>kite9-diagram-vis</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.0-beta-3</version>
			</plugin>

			<plugin>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.8</version>
				<configuration>
					<downloadSources>true</downloadSources>
					<sourceIncludes>
						<sourceInclude>**/*</sourceInclude>
					</sourceIncludes>
				</configuration>
			</plugin>
			
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.11</version>
				<configuration>
					<includes>
						<include>**/Test*.java</include>
					</includes>
					<!-- <testFailureIgnore>true</testFailureIgnore>  -->	
			        <forkMode>pertest</forkMode>
			        <argLine>-Xms500M -Xmx500M -Dkite9.logging=off -Djava.awt.headless=true -DignoreNotAddressed=true</argLine>
				</configuration>
			</plugin>
			
			<plugin>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.1.2</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			
		 	<plugin>
	            <groupId>com.github.wvengen</groupId>
	            <artifactId>proguard-maven-plugin</artifactId>
	            <version>2.0.6</version>
	            <dependencies>
                    <dependency>
                        <groupId>net.sf.proguard</groupId>
                        <artifactId>proguard-base</artifactId>

                        <version>5.1</version>
                        <scope>runtime</scope>
                    </dependency>
                </dependencies>
	            <executions>
	                <execution>
	                    <phase>package</phase>
	                    <goals>
	                        <goal>proguard</goal>
	                    </goals>
	                </execution>
	            </executions>               
	            <configuration>
					<libs> 
			<!-- 				<lib>${java.home}/lib/rt.jar</lib> -->
 			<!--       <lib>${java.home}/../Classes/classes.jar</lib>  -->  
				        <!--   lib>${java.home}/lib/classes.jar</lib -->
				        
						<lib>${java.home}/lib/rt.jar</lib>
				     </libs>   
	            </configuration>
	        </plugin>  

	        
	        <plugin>
				<groupId>org.kite9</groupId>
				<artifactId>kite9-java-maven-plugin</artifactId>
				<version>1.9</version>
				<configuration>
					<userProperties>
						<property>
							<name>context.projectId</name>
							<value>124</value>
						</property>
						<property>
							<name>context.secretKey</name>
							<value>982XFF1BN7Y7K6FO</value>
						</property>
					</userProperties>
				</configuration>
			</plugin>
			
			<plugin>
			    <artifactId>maven-jar-plugin</artifactId>
			    <executions>
			        <execution>
			            <id>full</id>
			            <phase>package</phase>
			            <goals>
			                <goal>jar</goal>
			            </goals>
			            <configuration>
			                <archive>
			                    <index>true</index>
			                    <manifest>
			                        <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
			                    </manifest>
			                </archive>
			
			                <classifier>full</classifier>
			                <includes>
			                    <include>**</include>
			                </includes>
			            </configuration>
			        </execution>
			
			        <execution>
			            <id>only-display</id>
			            <phase>package</phase>
			            <goals>
			                <goal>jar</goal>
			            </goals>
			            <configuration>
			                <archive>
			                    <index>true</index>
			                    <manifest>
			                        <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
			                    </manifest>
			                </archive>
			
			                <classifier>only-display</classifier>
			                <includes>
			                    <include>org/kite9/diagram/visualization/display/**</include>
			                    <include>org/kite9/diagram/visualization/format/**</include>
			                    <include>org/kite9/diagram/visualization/pipeline/rendering/**</include>
			                    <include>org/kite9/diagram/common/elements/**</include>
			                    <include>stylesheets/**</include>
			                    <include>fonts/**</include>
			                    <include>logo/**</include>
			                </includes>
			            </configuration>
			        </execution>
			    </executions>
			</plugin>
			
			
		</plugins>
	</build>
	
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>2.4</version>
			</plugin>
			<plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.7</version>
			</plugin>
			<plugin>
				<groupId>org.kite9</groupId>
				<artifactId>kite9-java-maven-plugin</artifactId>
				<version>1.9</version>
				<configuration>
					<userProperties>
						<property>
							<name>context.projectId</name>
							<value>124</value>
						</property>
						<property>
							<name>context.secretKey</name>
							<value>982XFF1BN7Y7K6FO</value>
						</property>
					</userProperties>
				</configuration>
			</plugin>
		</plugins>
	</reporting>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.kite9</groupId>
			<artifactId>kite9-java-core</artifactId>
			<version>1.11-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>org.kite9</groupId>
			<artifactId>kite9-java-tool</artifactId>
			<version>1.11-SNAPSHOT</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.kite9</groupId>
			<artifactId>kite9-java-examples</artifactId>
			<version>1.11-SNAPSHOT</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.xmlunit</groupId>
			<artifactId>xmlunit-core</artifactId>
			<version>2.1.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.thoughtworks.xstream</groupId>
			<artifactId>xstream</artifactId>
			<version>1.3.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math</artifactId>
			<version>2.1</version>
		</dependency>
		<dependency>
			<groupId>com.itextpdf</groupId>
			<artifactId>itextpdf</artifactId>
			<version>5.0.6</version>
			<exclusions>
				<exclusion>
					<groupId>org.bouncycastle</groupId>
					<artifactId>bcmail-jdk14</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.bouncycastle</groupId>
					<artifactId>bcprov-jdk14</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.bouncycastle</groupId>
					<artifactId>bctsp-jdk14</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.apache.xmlgraphics</groupId>
			<artifactId>batik-svggen</artifactId>
			<version>1.8</version>
		</dependency>
		<dependency>
			<groupId>org.apache.xmlgraphics</groupId>
			<artifactId>batik-bridge</artifactId>
			<version>1.8</version>
		</dependency>		
		<dependency>
			<groupId>org.apache.xmlgraphics</groupId>
			<artifactId>batik-ext</artifactId>
			<version>1.8</version>
		</dependency>
		<dependency>
			<groupId>org.apache.xmlgraphics</groupId>
			<artifactId>xmlgraphics-commons</artifactId>
			<version>2.1</version>
		</dependency>
	</dependencies>



</project>
